--- a/velomall/product.html
+++ b/velomall/product.html
@@ -20,41 +20,30 @@
           <div class="left blue-gradient">
             <div class="upper d-flex flex-align-center flex-justify-end">
               <div class="info d-flex flex-align-center">
-                <div class="image-contain">
-                  <img src="image/piggy-bank.svg" alt="piggy-bank">
-                </div>
+                <div class="image-contain icon-bank"></div>
                 <a href="#">Оплата и продажа</a>
               </div>
               <div class="info d-flex flex-align-center">
-                <div class="image-contain">
-                  <img src="image/avatar.svg" alt="avatar">
-                </div>
+                <div class="image-contain icon-body"></div>
                 <a href="#">Покупателям</a>
               </div>
               <div class="info d-flex flex-align-center">
-                <div class="image-contain">
-                  <img src="image/star.svg" alt="star">
-                </div>
+                <div class="image-contain icon-star"></div>
                 <a href="#">Акции и скидки</a>
               </div>
             </div>
           </div>
           <div class="right d-flex flex-align-center">
             <div class="info d-flex flex-align-center">
-              <div class="image-contain">
-                <img src="image/envelope.svg" alt="envelope">
-              </div>
+              <div class="image-contain icon-email"></div>
               <a href="#">Написать нам</a>
             </div>
             <div class="info d-flex flex-align-center">
-              <div class="image-contain">
-                <img src="image/heart.svg" alt="heart">
-              </div>
+              <div class="image-contain icon-heart"></div>
               <a href="#">Избранное</a>
             </div>
             <div class="info d-flex flex-align-center">
-              <div class="image-contain">
-                <img src="image/shopping-cart.svg" alt="shopping-cart">
+              <div class="image-contain icon-cart">
                 <div class="count blue-gradient"><a href="#">0</a></div>
               </div>
               <a href="#">Корзина</a>
@@ -70,9 +59,7 @@
             <p>Велосипеды для Вашего сердца</p>
           </a>
           <div class="address d-flex">
-            <div class="image-contain">
-              <img src="image/placeholder.svg" alt="placeholder">
-            </div>
+            <div class="image-contain icon-pointer"></div>
             <p>Москва, ул.Братиславская, д.22 (2 этаж)</p>
           </div>
           <div class="search">
@@ -93,9 +80,7 @@
         <div class="container d-flex flex-justify-between">
 
           <div class="active d-flex flex-justify-center flex-align-center">
-            <div class="image-contain">
-              <img src="image/bicycle-w.svg" alt="bicycle">
-            </div>
+            <div class="image-contain icon-bike"></div>
             <p>Велосипеды</p>
             <a href="catalog.html?search=bicycles"></a>
             <div class="header-bottom-nav-hover">
@@ -406,45 +391,33 @@
           </div>
 
           <div class="d-flex flex-justify-center flex-align-center">
-            <div class="image-contain">
-              <img src="image/nasos.png" alt="nasos">
-            </div>
+            <div class="image-contain icon-pump"></div>
             <p>Аксесуары</p>
             <a href="catalog.html?search=accessories"></a>
           </div>
 
           <div class="d-flex flex-justify-center flex-align-center">
-            <div class="image-contain">
-              <img src="image/clutch-disc.svg" alt="clutch-disc">
-            </div>
+            <div class="image-contain icon-spare"></div>
             <p>Запчасти</p>
           </div>
 
           <div class="d-flex flex-justify-center flex-align-center">
-            <div class="image-contain">
-              <img src="image/helmet.svg" alt="helmet">
-            </div>
+            <div class="image-contain icon-helmet"></div>
             <p>Экипировка</p>
           </div>
 
           <div class="d-flex flex-justify-center flex-align-center">
-            <div class="image-contain">
-              <img src="image/wrench.svg" alt="wrench">
-            </div>
+            <div class="image-contain icon-wrench"></div>
             <p>Инструменты</p>
           </div>
 
           <div class="d-flex flex-justify-center flex-align-center">
-            <div class="image-contain">
-              <img src="image/electric-scooter.svg" alt="electric-scooter">
-            </div>
+            <div class="image-contain icon-scooter"></div>
             <p>Самокаты</p>
           </div>
 
           <div class="d-flex flex-justify-center flex-align-center">
-            <div class="image-contain">
-              <img src="image/file.svg" alt="file">
-            </div>
+            <div class="image-contain icon-contacts"></div>
             <p>Контакты</p>
           </div>
 
@@ -1322,27 +1295,21 @@
         <div class="tel">
           <h2><span>8 (495)</span> 132-13-41</h2>
           <div class="block">
-            <div class="image-contain">
-              <img src="image/placeholder.svg" alt="placeholder">
-            </div>
+            <div class="image-contain icon-pointer"></div>
             <div class="text">
               <h2>Адрес:</h2>
               <p>Москва, ул.Братиславская,  д.22 (2 этаж)</p>
             </div>
           </div>
           <div class="block">
-            <div class="image-contain">
-              <img src="image/envelope.svg" alt="envelope">
-            </div>
+            <div class="image-contain icon-email"></div>
             <div class="text">
               <h2>E-mail:</h2>
               <a href="#">velomall@mail.ru</a>
             </div>
           </div>
           <div class="block">
-            <div class="image-contain">
-              <img src="image/chat.svg" alt="chat">
-            </div>
+            <div class="image-contain icon-chat"></div>
             <div class="text">
               <h2>Напишите нам</h2>
             </div>
